--- a/style/cart.css
+++ b/style/cart.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Fuzzy Bubbles', cursive;
 }
+
 body form .navbar{
     background-color: rgb(36, 22, 3);
     position: fixed;
@@ -12,7 +13,7 @@ body form .navbar{
     width: 100%
 }
 .navbar{
-        background-color: rgb(36, 22, 3);}
+    background-color: rgb(36, 22, 3);}
 nav .nav-item .nav-link{
     color: #fff;
 }
@@ -33,7 +34,7 @@ nav img{
     margin-left: -6%;
 }
 nav .logo button{
-    background-color: rgb(36, 22, 3);;
+    background-color: rgb(36, 22, 3);
     border: none;
 }
 nav .logo h1{
@@ -44,13 +45,23 @@ nav .logo h1{
     width: 80%;
 }
 .bread{
+    width: 350px;
     text-align: center;
-    box-shadow: 2px 1px 3px  ;
+    box-shadow: 2px 1px 3px;
     /* margin-top: 10px; */
+    margin-left: 1%;
+
+}
+.bread:hover{
+    position: relative;
+    box-shadow: 1rem 0rem  8rem 6rem rgb(166, 148, 125);
+    width: 400px;
 }
 .bread img{
-    width: 250px;
     height: 300px;
+}
+.bread img:hover{
+    background-color: antiquewhite;
 }
 .bread p{
     margin: -3% 0 0;
