--- a/style/light.css
+++ b/style/light.css
@@ -1,5 +1,5 @@
 @import "cart.css";
 body{
-    background-color: #fff !important;
+    background-color: rgb(237, 234, 234) !important;
     color: #000;
 }
