--- a/style/calc.css
+++ b/style/calc.css
@@ -4,7 +4,7 @@
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
-  z-index: -1;
+    z-index: -1;
 }
 /* .container2{
     background-image:url(images/creative\ video.mp4);
@@ -24,9 +24,15 @@
     text-align: left;
     width: 100%;
 }
+.container2 form label{
+    display: inline;
+}
 .container2 form input{
     border: transparent;
-    font-size: 1.5rem;
+    font-size: .5rem;
+    padding: 20px;
+    text-align: left;
+    width: 100%;
 }
 .container2 form h1{
     font-size: 4rem;
@@ -40,7 +46,6 @@
 .container2 form p, label{
     margin-top: 10px;
     font-size:1.5rem;
-    display: block;
 }
 .container2 form input[type="submit"]{
     display: block;
@@ -54,4 +59,9 @@
 }
 .container2 form input[type="submit"]:hover{
     background-color: red;
+}
+.container2 .iform{
+    display: none;
+    position: absolute;
+    right: 1rem;
 }
