--- a/style/cart.css
+++ b/style/cart.css
@@ -17,6 +17,9 @@ body form .navbar{
 nav .nav-item .nav-link{
     color: #fff;
 }
+/* nav .nav-item .nav-link ul li ul{
+    display: none;
+} */
 nav img{
     height: 40px;
     margin-left: 1rem;
@@ -40,6 +43,18 @@ nav .logo button{
 nav .logo h1{
     border-bottom: 2px solid rgb(240, 148, 29);
 }
+.prodUl{
+    display: none;
+    color: #fff;
+    z-index: 1;
+    position: absolute;
+    background-color: burlywood;
+    border-radius: 8px;
+    padding: 10px;
+}
+.prodUl li{
+    list-style-type: none;
+}
 .container{
     margin:5rem 10% 0;
     width: 80%;
@@ -56,6 +71,11 @@ nav .logo h1{
     position: relative;
     box-shadow: 1rem 0rem  8rem 6rem rgb(166, 148, 125);
     width: 400px;
+}
+.cartcase .bread:hover{
+    position: relative;
+    box-shadow: 1rem 1rem  8rem 1rem rgb(166, 148, 125);
+    width: 450px;
 }
 .bread img{
     height: 300px;
@@ -83,7 +103,7 @@ nav .btn:hover{
     text-align: left;
     background-color: burlywood;
 }
-.car a button{
+.car input[type="submit"]{
     width: 200px;
     background-color: burlywood;
     border-radius: 4px;
@@ -96,6 +116,8 @@ nav .btn:hover{
     flex-direction: column;
     justify-content: flex-end;
 }
-.container .car button:hover{
+.container .car input[type="submit"]:hover{
     background-color: #fff;
 }
+
+
