--- a/style/dark.css
+++ b/style/dark.css
@@ -1,5 +1,5 @@
 @import "cart.css";
 body{
-    background-color:#000 !important;
+    background-color: rgb(65, 53, 40) !important;
     color: #fff;
 }
